# DebtLedger

./: CMakeLists.txt  README.md
core/: models.h
core/providers/: ShoppingHistoryProvider.cpp
lib/cmake/Crow/: CrowConfig.cmake  CrowTargets.cmake
server/: main.cpp
